# final-project-la_bombas_del_diablo

./: BEM_working_Q1.py  Codediagram.dio  Collaboration.md  README.md  TO_DO.md  merge with malthes work  pyproject.toml  setup.py
Outdated_shit/: Question1.py  main.py  main_loop.py
examples/: __init__.py  cl_cd_computation.py  class.py  functions.py  main.py  main_loop.py  test.py
examples_old/: functions.py  main.py
src/: BemOptimization.py  __init__.py  functions.py
src/bombas_package/: BemOptimization.py  __init__.py
src/bombas_package/utils/: functions.py
tests/: Tests.py  conftest.py  test_bem.py  test_functions.py
