# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "final_project_BEM_la_bombas"
description = "Final project package for BEM by la bombas"
version = "0.0.1"
authors = [
    { name = "T.B. Gilhøj", email = "tgilhoj@gmail.com" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "pathlib",
    "pytest"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/codecamp-la-bombas.git"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Tell Hatch where to find your package files
[tool.hatch.build.targets.wheel]
packages = ["src/codecamp"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
